# DMCLBMMetal

./: .gitignore  .swiftformat  CMakeLists.txt  LICENSE  Package.resolved  Package.swift  README.md  clean_test.sh
.github/workflows/: swift_build_and_test_with_coverage.yml
Sources/DMCLBMMetal/: AirFoil.swift  EdgeForceCalc.swift  Lattice.swift  LatticeSize.swift  ShapeAdjacentCoords.swift  SiteProps.swift  SiteType.swift  Tracers.swift  TypesAndConstants.swift
Sources/DMCLBMMetal/MetalSupport/: MetalBuffMgr.swift  MetalError.swift  MetalModule.swift
Sources/DMCLBMMetal/Rendering/: ArrowShapeMaker.swift  ColorMath.swift  DensityRenderer.swift  EdgeForceRenderer.swift  FoilRenderer.swift  FrameRenderer.swift  ImageExtensions.swift  LegendRenderer.swift  MovieFrame.swift  NetForceRenderer.swift  Palettes.swift  RenderContext.swift  TextureCompositor.swift  TracerRenderer.swift  TypeAliases.swift  VertexUtils.swift  WorldWriter.swift
Sources/DMCLBMMetal/Resources/: CMakeLists.txt  compute.metal  render.metal  shared_defs
Sources/DMCLBMMetalSim/: StopWatch.swift  main.swift
Tests/DMCLBMMetalTests/: EdgeForceCalcTests.swift  LatticeTests.swift  MetalModuleTests.swift  ShapeAdjacentCoordsTests.swift  TracerTests.swift
Tests/DMCLBMMetalTests/Rendering/: MovieFrameTests.swift  PalettesTests.swift  TextureCompositorTests.swift  WorldWriterTests.swift
